# DD2358-Assignment-III

./: Dockerfile  Makefile.am  README.md  benchmark.sh  clean.sh  configure.ac  plot.gp
include/: matrix.h
include/libxsmm_include/: libxsmm.f  libxsmm.mod  libxsmm_version.h
scripts/: benchmark.sh  docker-entrypoint.sh  plot.gp  run.sh
src/: Makefile.am  main.c  matrix.c  matrix_lxsmm.c  matrix_oblas.c
src/.deps/: __top_builddir__bin_main_oblas_out-main.Po  __top_builddir__bin_main_oblas_out-matrix_oblas.Po  __top_builddir__bin_main_out-main.Po  __top_builddir__bin_main_out-matrix.Po  __top_builddir__bin_main_out-matrix_oblas.Po
tests/: Makefile.am  test.cpp
tests/.deps/: func_test-test.Po  func_test_oblas-test.Po
